--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name=".Login"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,26 +29,31 @@
         <activity
             android:name=".LoginSuccessActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_login_success" >
         </activity>
         <activity
             android:name=".StudentListActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_student_list_by_school" >
         </activity>
         <activity
             android:name=".FilterStudentBySchoolActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_filter_student_by_school" >
         </activity>
 
         <activity android:name="AndroidDatabaseManager"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="AndroidDatabaseManager"/>
 
         <activity
             android:name=".ScreeningTestListActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_screeningtest_list"
             android:parentActivityName=".StudentListActivity" >
             <meta-data
@@ -57,6 +63,7 @@
         <activity
             android:name=".ScreeningTestDetailActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_screeningtest_detail"
             android:parentActivityName=".ScreeningTestListActivity" >
             <meta-data
@@ -66,41 +73,49 @@
         <activity
             android:name=".StudentSearchAndListActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_student_search_and_list" >
         </activity>
         <activity
             android:name=".RegisterStudentActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_register_student" >
         </activity>
         <activity
             android:name=".StudentDetailsActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_student_details" >
         </activity>
         <activity
             android:name=".ReportActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_report" >
         </activity>
         <activity
             android:name=".TutorialActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_tutorial" >
         </activity>
         <activity
             android:name=".DummyListActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_dummy_list" >
         </activity>
         <activity
             android:name=".EnregistrementVideoStackActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_enregistrement_video_stack" >
         </activity>
         <activity
             android:name=".VideoCapture"
             android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_video_capture" >
         </activity>
     </application>
