--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:support-v13:20.0.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile files('libs/opencsv-1.7.jar')
+    compile files('libs/poi-3.8-beta4-20110826.jar')
 }
